<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.demonickrace.easytest.MathTestActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testTitle"
        android:id="@+id/testTitleTextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/scrollView"
        android:nestedScrollingEnabled="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/testContent"
            android:id="@+id/testContentTextView"
            android:paddingTop="10dp" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/scrollView2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            android:id="@+id/operationTextView"
            android:textSize="20sp"
            android:textIsSelectable="false" />
    </ScrollView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answerEditText"
        android:text="@string/answer"
        android:numeric="decimal"
        android:inputType="numberDecimal"
        android:nestedScrollingEnabled="false" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solution"
            android:id="@+id/solutionBtn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextQuestion"
            android:id="@+id/nextQuestionBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:id="@+id/answerReplyTextView"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/answerReply"
            android:background="@color/highlighted_text_material_dark"
            android:textAlignment="center" />

    </RelativeLayout>

</LinearLayout>
